--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.27.1",
     "@clerk/themes": "^2.4.2",
+    "joi": "^17.13.3",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
