--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   "dependencies": {
     "@clerk/nextjs": "^6.27.1",
     "@clerk/themes": "^2.4.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tabler/icons-react": "^3.34.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "joi": "^17.13.3",
+    "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
