--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@reactour/mask": "^1.2.0",
+    "@reactour/popover": "^1.3.0",
+    "@reactour/tour": "^3.8.0",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
@@ -26,7 +29,6 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-joyride": "^2.9.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
